--- a/src/app/components/pages/home/home.component.html
+++ b/src/app/components/pages/home/home.component.html
@@ -1,5 +1,5 @@
 <div class="section s1">
-    <div class="bg-overlay"></div>
+    <div class="bg-poly-overlay"></div>
     <div class="snav snav-left" (click)="this.headerPrev()">
         <div class="snav-btn">
             <div></div>
