--- a/src/app/components/pages/membership/membership.component.html
+++ b/src/app/components/pages/membership/membership.component.html
@@ -1,11 +1,27 @@
-<div class="page-header">
+<!-- <div class="page-header">
     <app-section-page-header></app-section-page-header>
-</div>
+</div> -->
 
-<div class="main-body">
+<div class="wrapper">
+  <div class="header-banner">
+    <div class="bg-poly-overlay"></div>
+    <div class="banner">
+      <div class="label">
+        <div class="title">
+            <span>Membership</span>
+        </div>
+        <div class="brief">
+            <span>Explore your benefits!</span>
+        </div>
+      </div>
+    
+      <div class="svg"></div>
+    </div>
+  </div>
+
   <div class="section s1">
     <div class="section-header">
-      <span>Our Membership</span>
+      <span>Join the community!</span>
     </div>
 
     <div class="section-body">
@@ -37,17 +53,6 @@
         
         
       </div>
-       
-      <!-- <div class="brief">
-        <span>
-          MyRAS membership is open to all individuals and companies.
-          This will help MyRAS to expand its contributions on robotics
-          and automation awereness for industrial growth in Malaysia.
-          The technology of robotics and automation is advancing day-to-day
-          throughout the world and Malaysia should keep up with the pace.
-        </span>
-        <span>Join us in realising our vision of making Malaysia IR 4.0 ready!</span>
-      </div> -->
 
     </div>
 
