--- a/src/app/components/pages/activities/activities.component.scss
+++ b/src/app/components/pages/activities/activities.component.scss
@@ -18,7 +18,7 @@
     min-height: 100vh;
     width: 100%;
 
-    background-color: $color-bg-light;
+    background-color: white;
 }
 
 .section {
@@ -27,7 +27,7 @@
     height: fit-content;
     width: 100%;
 
-    background-color: $color-bg-light;
+    background-color: white;
 
     &.t {
         height: 100vh;
@@ -96,64 +96,11 @@
     margin-left: auto;
     margin-right: auto;
 
-    box-shadow: 0px 2px 5px 1px rgba(0, 0, 0, .3);
+    /* box-shadow: 0px 2px 5px 1px rgba(0, 0, 0, .3); */
 
     background-color: white;
     margin-bottom: 10px;
 
-    /* & > .cluster-nav {
-        display: flex;
-        justify-content: left;
-        align-items: flex-end;
-
-        padding-left: 100px;
-
-        position: relative;
-
-        height: 70px;
-        width: 100%;
-
-        & > .cluster-nav-item {
-            position: relative;
-
-            width: 200px;
-            height: 50px;
-
-            margin-right: 10px;
-
-            background-color: orange;
-            color: rgb(179, 116, 1);
-
-            user-select: none;
-
-            text-align: center;
-            line-height: 50px;
-
-            border-top-left-radius: 3px;
-            border-top-right-radius: 3px;
-
-            & > i {
-                font-size: 20px;
-                padding-right: 10px;
-            }
-
-            transition: .3s all;
-            &.active {
-                height: 70px;
-                line-height: 70px;
-                background-color: white;
-                color: orange;
-
-                box-shadow: 5px 0 px 1px rgba(0, 0, 0, .3);
-
-                z-index: 3;
-            }
-
-            &:hover {
-                cursor: pointer;
-            }
-        }
-    } */
     & > .cluster-nav {
         display: flex;
         position: relative;
@@ -209,25 +156,6 @@
                 cursor: pointer;
             }
 
-            /* &::before {
-                content: '';
-
-                position: absolute;
-                left: 0;
-                top: 50%;
-                transform: translateY(-50%);
-
-                height: 80%;
-                width: 100%;
-
-                border-right: 2px solid rgba(255, 166, 0, 0.329);
-            }
-
-            &:nth-last-child(1) {
-                &::before {
-                    border-right: 0px solid orange;
-                }
-            } */
         }
     }
 
@@ -236,10 +164,6 @@
 
         min-height: 50vh;
         width: 100%;
-
-        /* box-shadow: 0px 2px 5px 1px rgba(0, 0, 0, .3);
-
-        background-color: white; */
         
         z-index: 2;
 
@@ -271,7 +195,7 @@
                 height: fit-content;
                 width: 100%;
 
-                box-shadow: 0px 2px 5px 1px rgba(0, 0, 0, .3);
+                /* box-shadow: 0px 2px 5px 1px rgba(0, 0, 0, .3); */
                 border-radius: 3px;
 
                 padding: 10px;
@@ -324,11 +248,97 @@
     
                     padding-top: 30px;
     
-                    /* background-color: orange; */
                 }
             }
 
             
+        }
+    }
+}
+
+.event-items {
+    position: relative;
+
+    height: fit-content;
+    width: 100%;
+
+    display: flex;
+    flex-direction: column;
+
+    & > .item {
+        position: relative;
+
+        height: 350px;
+        width: 100%;
+
+        padding: 30px 30px;
+
+        display: flex;
+
+        & > .thumbnail {
+            position: relative;
+
+            height: 100%;
+            width: 350px;
+
+            & > .img {
+                position: relative;
+
+                height: 100%;
+                width: 100%;
+
+                background-color: orange;
+            }
+        }
+
+        & > .details {
+            position: relative;
+
+            height: 100%;
+            width: calc(100% - 350px);
+
+            padding-left: 30px;
+
+            display: flex;
+            flex-direction: column;
+
+            & > .header {
+                position: relative;
+
+                height: 50px;
+                width: 100%;
+
+                font-size: 24px;
+            }
+
+            & > .body {
+                position: relative;
+
+                height: 150px;
+                width: 100%;
+
+                text-align: justify;
+
+                text-overflow: ellipsis;
+                overflow: hidden;
+            }
+
+            & > .footer {
+                position: absolute;
+                right: 0;
+                bottom: 0;
+
+                height: fit-content;
+                width: fit-content;
+
+                display: flex;
+
+                font-size: 15px;
+
+                & > div {
+                    margin-left: 10px;
+                }
+            }
         }
     }
 }
@@ -427,14 +437,8 @@
     }
 
     &:hover {
-       /*  & > .header {
-            opacity: .5;
-        } */
         & > .img {
             transform: scale(1.05);
         }
-        /* & > .brief {
-            opacity: .5;
-        } */
     }
 }
