--- a/src/app/components/sections/page-header/page-header.component.scss
+++ b/src/app/components/sections/page-header/page-header.component.scss
@@ -29,7 +29,7 @@
                 clip-path: polygon(50% 40%, 100% 0, 100% 100%, 0 100%, 0 0);
             }
             &:nth-child(2) {
-                background-color: $color-bg-light;
+                background-color: white;
                 clip-path: polygon(50% 90%, 100% 0, 100% 100%, 0 100%, 0 0);
             }
         }
